--- a/Iniciando HTML e CSS/style.css
+++ b/Iniciando HTML e CSS/style.css
@@ -90,6 +90,7 @@ body *{
     background-color: var(--surface-color);
     border: 1px solid var(--stroke-color);
     -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(10px);
 
 }
 .light #switch button {
