--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 
     */
     background: var(--bg-url) no-repeat top center/cover;
+    height: 100vh;
 }
 body *{
     font-family: 'Inter', sans-serif;
@@ -42,7 +43,8 @@ body *{
 }
 
 #container {
-    width: 360px;
+    width: 100%;
+    max-width: 588px;
     margin: 56px auto 0px;
     padding: 0 24px;
 
@@ -74,6 +76,7 @@ body *{
     top: 50%;
     transform: translateY(-50%);
     z-index: 1;
+    animation: slide-to-moon .2s;
 
     background: white var(--switch-handle) no-repeat center ;
     width: 32px;
@@ -81,6 +84,10 @@ body *{
     border: 0;
     border-radius: 50%;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+}
+#switch button:hover {
+    outline: 8px solid var(--highlight-color);
+
 }
 #switch span{
     display: block;
@@ -94,8 +101,7 @@ body *{
 
 }
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-to-sun .2s forwards;
 }
 /* Links*/
 #links {
@@ -162,4 +168,32 @@ ul li a:hover {
 #footer p {
     font-weight: 400;
     font-size: 14px;
+}
+
+/* Query selector*/
+@media (min-width: 700px){
+    :root {
+        --bg-url: url(./assets/bg-desktop-dark\ \(1920x1080\).jpg);
+    }
+
+    .light {
+        --bg-url: url(./assets/bg-desktop-light\ \(1920x1080\).jpg);
+    }
+}
+
+@keyframes slide-to-sun {
+    from {
+        left: 0;
+    }
+    to{
+        left: 50%;
+    }
+}   
+@keyframes slide-to-moon {
+    from {
+        left: 50%;
+    }
+    to{
+        left: 0;
+    }
 }
